--- a/styles.css
+++ b/styles.css
@@ -58,30 +58,35 @@ label {
   margin: 0.5rem 0;
 }
 
-#dropdown,
 .number-age,
 #name,
 #email {
   height: 2rem;
+  width: 98.6%;
+}
+
+#dropdown {
   width: 100%;
+  height: 2.4rem;
 }
 
 textarea {
   display: inline;
-  width: 100%;
+  width: 99%;
   height: 100px;
 }
 
 .text {
-  margin: 20px 0 0
+  margin: 20px 0 0;
 }
 
 .submit-button {
-  margin: 20px auto;
+  margin: 20px 0;
   display: inline;
   width: 100%;
   height: 50px;
   font-size: 20px;
   color: #623b06;
   background-color: #FFF99F;
+  border: 10px solid #FFF99F;
 }
